alignment of information fix

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,9 @@ html {
 }
 
 .info {
-    align-content: center;
+    display: block;
+    position: relative;
+    margin: auto;
 }
 
 .icon {
